--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -43,7 +43,7 @@
                         <a class="mx-2" href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
-                        <a href="D:\Internship Projects\personal-cv-website-template\personal-cv-website-template\LDCE_COMPUTER_NIDHI BHALSOD_RESUME.pdf" class="btn btn-block border-right">Download CV</a>
+                        <a href="LDCE_COMPUTER_NIDHI BHALSOD_RESUME.pdf" class="btn btn-block border-right">Download CV</a>
                         <a href="#contact" class="btn btn-block btn-scroll">Contact Me</a>
                     </div>
                 </div>
